reduce decoding table memory